Páginas Spring e React

--- a/react.html
+++ b/react.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página principal</h1>
-    <h2>Frameworks para back end</h2>
-    <a href="spring.html">Spring Boot</a>
-    <h2>Frameworks para front end</h2>
-    <a href="react.html">React</a>
+    <h1>React</h1>
+    <p>Desenvolva com JavaScript e TypeScript</p>
 </body>
 </html>
