Links para página inicial

--- a/react.html
+++ b/react.html
@@ -9,5 +9,6 @@
 <body>
     <h1>React</h1>
     <p>Desenvolva com JavaScript e TypeScript</p>
+    <a href="index.html">Página inicial</a>
 </body>
 </html>
