--- a/spring.html
+++ b/spring.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Spring Boot</h1>
     <p>Desenvolva com Java, Kotlin e Groovy</p>
+    <a href="index.html">Página inicial</a>
 </body>
 </html>
