--- a/laravel.html
+++ b/laravel.html
@@ -7,11 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página principal</h1>
-    <h2>Frameworks para back end</h2>
-    <a href="spring.html">Spring Boot</a>
-    <a href="laravel.html">Laravel</a>
-    <h2>Frameworks para front end</h2>
-    <a href="react.html">React</a>
+    <h1>Laravel</h1>
+    <p>Desenvolva com PHP</p>
+    <a href="index.html">Página inicial</a>
 </body>
 </html>
